--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,10 +9,12 @@
         "prettier"
     ],
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
     "rules": {
         "no-unused-vars": "warn",
-        "no-console": "off"
+        "no-console": "off",
+        "no-undef": "warn"
     }
 }
