--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "sanitize-html": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
